--- a/index.html
+++ b/index.html
@@ -35,9 +35,12 @@
           <p class="card__paragraph">
             Monitors activity to identify project roadblocks
           </p>
-          <svg class="card__img">
-            <image href="img/icon-supervisor.svg"></image>
-          </svg>
+
+          <img
+            src="img/icon-supervisor.svg"
+            alt="Supervisor Icon"
+            class="card__img"
+          />
         </div>
       </div>
       <div class="card card--2">
@@ -46,9 +49,11 @@
           <p class="card__paragraph">
             Scans our talent network to create the optimal team for your project
           </p>
-          <svg class="card__img">
-            <image href="img/icon-team-builder.svg"></image>
-          </svg>
+          <img
+            src="img/icon-team-builder.svg"
+            alt="Team Builder"
+            class="card__img"
+          />
         </div>
       </div>
       <div class="card card--3">
@@ -57,9 +62,12 @@
           <p class="card__paragraph">
             Uses data from past projects to provide better delivery estimates
           </p>
-          <svg class="card__img">
-            <image href="img/icon-calculator.svg"></image>
-          </svg>
+
+          <img
+            src="img/icon-calculator.svg"
+            alt="Calculator Icon"
+            class="card__img"
+          />
         </div>
       </div>
       <div class="card card--4">
@@ -68,9 +76,8 @@
           <p class="card__paragraph">
             Regularly evaluates our talent to ensure quality
           </p>
-          <svg class="card__img">
-            <image href="img/icon-karma.svg"></image>
-          </svg>
+
+          <img src="img/icon-karma.svg" alt="Karma Icon" class="card__img" />
         </div>
       </div>
     </section>
